--- a/package.json
+++ b/package.json
@@ -11,45 +11,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.0",
-    "@angular/cdk": "^10.0.0",
-    "@angular/common": "^10.0.0",
-    "@angular/compiler": "^10.0.0",
-    "@angular/core": "^10.0.0",
-    "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "^10.0.0",
-    "@angular/material": "^10.0.0",
-    "@angular/platform-browser": "^10.0.0",
-    "@angular/platform-browser-dynamic": "^10.0.0",
-    "@angular/router": "^10.0.0",
-    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@angular/animations": "^13.1.0",
+    "@angular/cdk": "^13.1.0",
+    "@angular/common": "^13.1.0",
+    "@angular/compiler": "^13.1.0",
+    "@angular/core": "^13.1.0",
+    "@angular/flex-layout": "^13.0.0-beta.36",
+    "@angular/forms": "^13.1.0",
+    "@angular/material": "^13.1.0",
+    "@angular/platform-browser": "^13.1.0",
+    "@angular/platform-browser-dynamic": "^13.1.0",
+    "@angular/router": "^13.1.0",
+    "@fortawesome/angular-fontawesome": "^0.10.1",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "^10.0.0",
-    "@angular/compiler-cli": "^10.0.0",
-    "@angular/language-service": "^10.0.0",
-    "@types/jasmine": "~3.3.8",
+    "@angular-devkit/build-angular": "~13.1.2",
+    "@angular/cli": "^13.1.0",
+    "@angular/compiler-cli": "^13.1.0",
+    "@angular/language-service": "^13.1.0",
+    "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~4.5"
   }
 }
